# aws-lambda-contact-form-handler

./: .gitignore  Dockerfile  README.md  template.yaml
lambda/: app.py  pyproject.toml
lambda/app_handler/: __init__.py
lambda/app_handler/provider/: app.py  config.py  request.py  response.py
lambda/app_handler/runner/: app.py  database.py  discord.py  dynamodb.py  email.py  hcaptcha.py  slack.py
lambda/app_handler/service/: aws.py  discord.py  hcaptcha.py  http.py  http_post_json.py  slack.py
lambda/app_handler/utils/: functions.py
lambda/example/: __init__.py  example.py  payload.py
lambda/tests/integration/: test_integaration.py
lambda/tests/unit/: test_payload.py  test_unit.py
lambda/tests/unit/fixtures/: api_gateway_request_json_base64.json  api_gateway_request_json_no_base64.json  api_gateway_request_urlencoded_base64.json  api_gateway_request_urlencoded_no_base64.json  httpapiv2_gateway_request_json_base64.json  httpapiv2_gateway_request_json_no_base64.json  httpapiv2_gateway_request_urlencoded_base64.json  httpapiv2_gateway_request_urlencoded_no_base64.json  request.json  ses_inbound_email.json  sns_message_v1.json
lambda/tests/unit/provider/: test_app.py  test_config.py  test_request.py  test_response.py
lambda/tests/unit/runner/: test_app.py  test_database.py  test_discord.py  test_dynamodb.py  test_email.py  test_hcaptcha.py  test_slack.py
lambda/tests/unit/service/: aws_utils.py  discord_utils.py  hcaptcha_utils.py  http_utils.py  slack_utils.py  test_aws.py  test_discord.py  test_hcaptcha.py  test_http.py
scripts/: build.sh  poetry.sh  (+2 more)
(+4 files in other folders)
