[tool.poetry]
name = "app_handler"
version = "1.1.5"
description = "App handler"
authors = ["Voquis"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.21.39"
botocore = "^1.24.40"
PyYAML = "^6.0"
value-fetcher = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pylint = "^2.13.5"
moto = "^3.1.4"
coverage = "^6.3.2"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
